--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Programines-frontend",
+  "name": "programines-frontend",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint --fix",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@heroui/button": "2.2.23",
@@ -61,6 +62,7 @@
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-unused-imports": "4.1.4",
+    "gh-pages": "^6.3.0",
     "globals": "16.0.0",
     "postcss": "8.5.6",
     "prettier": "3.5.3",
